# aqua_driver

./: .gitignore  .gitmodules  Design assumptions.md  aqua_driver.kicad_prl  aqua_driver.kicad_pro  aqua_driver.kicad_sch  bluetooth_module.kicad_sch  led.kicad_sch  led_module.kicad_sch  power.kicad_sch  temperature control.kicad_sch  temperature_control.kicad_sch
main_µC/: avr.txt  build.sh  generate_lst.py  meson.build  platformio.ini  setup.sh
main_µC/src/: main.cpp
simulations/LED_driver/: LED_driver.kicad_pro  LED_driver.kicad_sch  LED_driver.wbk
